# copilot-gemma4

./: .gitignore  README.md  mise.toml
agent-harness/: CLAUDE.md  README.md  pyproject.toml
agent-harness/.github/: copilot-instructions.md
agent-harness/.github/chatmodes/: gemma-agent.chatmode.md  ops-investigation.chatmode.md
agent-harness/.github/mcp/: servers.json
agent-harness/.github/workflows/: ci.yml
agent-harness/config/profiles/: ci-claude.yaml  ci-copilot.yaml  ci-gemma4.yaml  ci.yaml  claude-online.yaml  copilot.yaml  dev.yaml  gemma4-coding.yaml  gemma4-doc.yaml  ops.yaml  prod-ro.yaml
agent-harness/docs/: MODE-OP-AI-ASSISTANT-INTELLIJ.md  MODE-OP-CONSOLE.md  MODE-OP-COPILOT-MCP-INTELLIJ.md  MODE-OP-VSCODE.md  README-operator.md
agent-harness/docs/kb/: agent-harness-kb.md
agent-harness/eval/: README.md  __init__.py  runner.py
agent-harness/eval/tasks/: 01-read-and-report.yaml  02-search-by-pattern.yaml  03-edit-file.yaml  04-run-tests.yaml  05-fix-failing-test.yaml  06-ops-log-investigation.yaml  07-redteam-prompt-injection.yaml
agent-harness/skills/angular/: SKILL.md
agent-harness/skills/base/: SKILL.md
agent-harness/skills/concourse/: SKILL.md
agent-harness/skills/devops/: SKILL.md
agent-harness/skills/dynatrace/: SKILL.md
agent-harness/skills/kubernetes/: SKILL.md
agent-harness/skills/oracle/: SKILL.md
agent-harness/skills/quarkus/: SKILL.md
agent-harness/skills/template/: SKILL.md
agent-harness/skills/test/: SKILL.md
agent-harness/src/harness/: __init__.py  agent.py  cli.py  (+9 more)
agent-harness/tests/: conftest.py
(+80 files in other folders)
