[project]
name = "agent-harness"
version = "0.1.0"
description = "Local agentic harness around Gemma (Ollama) — coding & ops profiles"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "ollama>=0.4.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "rich>=13.7",
    "typer>=0.12",
    "jsonschema>=4.21",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
    "mcp>=1.0",
    "anyio>=4.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "respx>=0.21",
]
rag = [
    "chromadb>=0.5",
]
anthropic = [
    "anthropic>=0.42",
]
openai = [
    "openai>=1.30",
]
all = [
    "agent-harness[dev,rag,anthropic,openai]",
]

[project.scripts]
harness = "harness.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
